# Reporte_GPS

./: .gitignore  README.md  actualizar.ps1  cli.py  inspect_excel.py  pyproject.toml  requirements-dev.txt  requirements.txt  zonas.json
.github/workflows/: ci.yml
docs/: index.html
src/: geo.py  io_loader.py  maps_preview.py  pipeline.py  report_anomalias.py  report_html.py  report_pdf.py  schema.py  transform.py  validation.py
src/anomalias/: __init__.py  core.py
tests/: audit_report.py  bench_transform.py  inspect_html.py  smoke_maps_preview.py  test_geo.py  test_io_loader.py  test_maps_preview.py  test_ranking.py  test_report_anomalias.py  test_transform.py  test_validation.py
