[project]
name = "reporte-gps"
version = "0.1.0"
description = "Sistema de análisis de anomalías GPS para flota de vehículos en Cartagena"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Juan Esteban Cardozo" }]
license = { text = "Proprietary" }

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["docs", "reportes", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # handled by black/line-length
    "B008",  # function call in default argument
]

[tool.black]
line-length = 120
target-version = ["py312"]
extend-exclude = "(docs|reportes|\\.venv)"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
# Ensure tests can import `src.*` without per-file sys.path hacks.
# Pytest >= 7 honors this and prepends the listed paths to sys.path
# before any test collection, which keeps CI-on-Linux happy even when
# tests are collected alphabetically (Linux is strict; Windows masks
# the issue via CWD-on-sys.path fallbacks).
pythonpath = ["."]
